@@ -1,3 +1,7 @@
+2005-04-04 Toady <toady@gscore.org>
+
+	* plugins/abc/import-abc.c, src/score.c: abc plugin can import scores correctly
+	
 2005-04-03 Toady <toady@gscore.org>
 
 	* src/edit.c: improved measure jumping
